# cowabungaai

./: .dockerignore  .env.example.turso  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD_SUMMARY.md  DEPLOYMENT_SUMMARY.md  Dockerfile.migrations  GPU_DEPLOYMENT_REPORT.md  Handbook.md  KNOWN_ISSUES.md  LICENSE  LICENSE.bsl  Makefile  README.md  RENAME_PLAN.md  SPONSORS.md  SUPABASE_INVESTIGATION.md  TURSO_INTEGRATION_PLAN.md  pyproject.toml  tasks.yaml  zarf-supabase.yaml
.desloppify/: plan.json  plan.json.bak  progression.jsonl  query.json  review_packet_blind.json  state-python.json  state-python.json.bak
.desloppify/review_packets/: holistic_packet_20260308_005543.json  holistic_packet_20260419_125138.json  holistic_packet_20260419_125331.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/actions/lfai-core/: action.yaml
.github/actions/release/: action.yaml  action.yaml.disabled
.github/workflows/: e2e-llama-cpp-python.yaml  e2e-playwright.yaml  e2e-text-backend-full-cpu.yaml  e2e-text-embeddings.yaml  e2e-vllm.yaml.disabled  e2e-whisper.yaml  helm-lint.yaml  nightly-snapshot-release.yaml  nightly-snapshot-release.yaml.disabled  pytest.yaml.disabled  release.yaml  tag-for-release.yaml  weekly-registry1-flavor-test.yaml.disabled  zarf-lint.yaml.disabled
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
adr/: 0001-vectordb-backend.md  0002-llm-backend.md  0003-database.md  0004-rag-eval-toolset.md  0005-testing-strategy.md  0006-queueing-high-traffic.md  0007-rag-eval-framework.md
bundles/dev/cpu/: uds-bundle-full.yaml  uds-bundle-turso.yaml  uds-bundle.yaml  uds-config.yaml
bundles/dev/gpu/: uds-bundle.yaml  uds-config.yaml
bundles/latest/cpu/: uds-bundle.yaml  uds-config.yaml
bundles/latest/gpu/: uds-bundle.yaml
docs/: DEVELOPMENT.md  QUICKSTART.md
legacy/cowabunga_api/: Makefile  README.md  config.example.yaml  pyproject.toml
legacy/cowabunga_api/backend/: composer.py  grpc_client.py  helpers.py
legacy/cowabunga_api/data/: crud_message.py  crud_vector_store.py  crud_vector_store_file.py
legacy/cowabunga_evals/: main.py  pyproject.toml
legacy/cowabunga_sdk/: Dockerfile  README.md  __init__.py  cli.py  pyproject.toml  serve.py  utils.py
legacy/cowabunga_ui/: .dockerignore  .prettierignore  README.md  package.json
rust/: Cargo.toml  deny.toml  justfile
rust/.cargo/: config.toml
rust/crates/api/: Cargo.toml
rust/crates/api/src/: auth.rs  backend.rs  error.rs  lib.rs  main.rs  router.rs  state.rs
rust/crates/api/src/routes/: chat.rs  health.rs  mod.rs  models.rs
rust/crates/api/src/types/: chat.rs  mod.rs  models.rs
rust/crates/api/tests/: integration.rs
rust/crates/db/: Cargo.toml
rust/crates/db/src/: error.rs  lib.rs  libsql.rs  memory.rs  migrations.rs  storage.rs
rust/crates/models/: Cargo.toml
rust/crates/models/src/: config.rs  lib.rs
rust/crates/sdk/: Cargo.toml  build.rs
rust/crates/sdk/src/: lib.rs
rust/crates/ui/: Cargo.toml
rust/crates/ui/src/: app.rs  lib.rs  main.rs
rust/migrations/refinery/: V1__initial_schema.sql  V2__reconcile_assistant_table.sql
scripts/: docker-helper.sh
specs/001-update-the-feature/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-build-system-validation/: plan.md  spec.md  tasks.md
src/cowabunga_api/: Makefile  config.example.yaml  config.py  main.py  pyproject.toml
src/cowabunga_evals/: main.py  pyproject.toml
src/cowabunga_sdk/: Dockerfile  __init__.py  config.py  llm.py  pyproject.toml
src/cowabunga_ui/: .env.example  Dockerfile  package-lock.json
src/leapfrogai_api/: Makefile  README.md  config.py  main.py  pyproject.toml
src/leapfrogai_evals/: README.md
src/leapfrogai_sdk/: Dockerfile
src/leapfrogai_ui/: Dockerfile  README.md
tests/: Makefile  README.md
tests/conformance/: test_assistants.py  test_chat_files.py  test_completions.py  test_files.py  test_messages.py  test_runs.py  test_threads.py  test_tools.py  test_vectorstore.py
tests/database/: test_database_factory.py  test_turso_client.py
tests/e2e/: conftest.py  test_api.py  test_supabase.py  test_text_backend_full.py
tests/load/: README.md  loadtest.py
tests/mocks/: mock_crud.py  mock_session.py  mock_tables.py
tests/unit/: conftest.py  test_module_imports.py  test_smoke_imports.py
tests/utils/: client.py  data_path.py  router_utils.py
website/: hugo.toml
(+301 files in other folders)
