[workspace]
members = ["crates/api", "crates/sdk", "crates/db", "crates/models", "crates/ui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libsql = "0.9"
tonic = { version = "0.13" }
tonic-build = { version = "0.13" }
prost = { version = "0.13" }
refinery = { version = "0.8", features = ["tokio-postgres"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.16", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
