[package]
name = "cowabunga-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cowabunga-sdk = { path = "../sdk" }
cowabunga-db = { path = "../db" }
cowabunga-models = { path = "../models" }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tower = { workspace = true }
http-body-util = "0.1"
