[package]
name = "cowabunga-models"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
notify = { version = "8.0", default-features = false, features = ["macos_fsevent"] }

[dev-dependencies]
tokio-test = "0.4"
