[package]
name = "cowabunga-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
walkdir = "2.5"
