[package]
name = "cowabunga-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
leptos = { version = "0.8", features = ["ssr"] }
leptos_axum = { version = "0.8" }
leptos_meta = { version = "0.8" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }

[[bin]]
name = "cowabunga-ui"
path = "src/main.rs"
